--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
           <section class="form-floating shadow bg-dark rounded">
             <form onsubmit="app.NotesController.createNotes()" class="row justify-content-center">
               <div class="col-1 m-3 p-1">
-                <input required id="color" name="color" type="color" class="from-control">
+                <input required id="Color" name="color" type="color" class="from-control">
               </div>
               <div class="col-3 m-3 p-1">
                 <textarea rows="1" class="from-control" name="Title" id="Note-Title" required>Title</textarea>
               </div>
               <div class="col-3 m-3">
-
                 <button class="btn btn-primary" type="submit" title="Create Note">Create +</button>
               </div>
             </form>
