Active-Notes-Working-NeedsSaveetc

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 
           <section id="Notes-List">
             <!-- <section class="row note-Decoration text-light m-3 rounded">
-              <div class="selectable mb-3 d-flex">
+              <div role="button")"
+                class="selectable mb-3 d-flex">
                 <span class="fw-bold m-2">${this.name}</span><span class="m-2">${this.ShortReportedDate}</span>
               </div>
               <span class="m-2">${this.description}</span>
@@ -104,8 +105,8 @@
         <!-- SECTION get notes -->
         <div class="col-8 bg-dark rounded shadow text-light ">
           <section id="Active-Notes">
-            <!-- 
-            <div class="m-3">
+
+            <!-- <div class="m-3">
               <h2>${this.name}</h2>
               <p>${this.ShortReportedDate}</p>
               <p>Last Updated: ${this.FormattedUpdatedAt}</p>
